tests/snapshots/formats__sid__test.sid.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ test.sid — "Fillyfoal SID" by Composer, 2 songs (PSID)  [0x0+0x8c]
    Magic: "PSID"  [0x0+0x4]
    Version: 2  [0x4+0x2]
    Data offset: 0x7c  [0x6+0x2]
    Load address: 0x1000  [0x8+0x2]
    Init address: 0x1000  [0xa+0x2]
    Play address: 0x1003  [0xc+0x2]
    Songs: 2  [0xe+0x2]
    Start song: 1  [0x10+0x2]
    Speed flags: 0x0  [0x12+0x4]
    Name: "Fillyfoal SID"  [0x16+0x20]
    Author: "Composer"  [0x36+0x20]
    Released: "2026 Fillyfoal"  [0x56+0x20]
    Flags: 0x14  [0x76+0x2]
    Relocation start page: 0x0  [0x78+0x1]
    Relocation page length: 0  [0x79+0x1]
    Second SID address: 0x0  [0x7a+0x1]
    Third SID address: 0x0  [0x7b+0x1]
    C64 data  [0x7c+0x10]
