tests/snapshots/formats__sid__tune.sid.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ tune.sid — PSID v2, 3 songs — fillyfoal – Tune – 2026 Tests  [0x0+0x83]
  ▾ Header  [0x0+0x7c]
      Magic: "PSID"  [0x0+0x4]
      Version: 2  [0x4+0x2]
      Data offset: 0x7c  [0x6+0x2]
      Load address: 0x1000  [0x8+0x2]
      Init address: 0x1000  [0xa+0x2]
      Play address: 0x1003  [0xc+0x2]
      Songs: 3  [0xe+0x2]
      Start song: 1  [0x10+0x2]
      Speed: 0x0  [0x12+0x4]
      Name: "Tune"  [0x16+0x20]
      Author: "fillyfoal"  [0x36+0x20]
      Released: "2026 Tests"  [0x56+0x20]
      Flags: 0x14 [PAL | MOS6581]  [0x76+0x2]
      Start page: 0x0  [0x78+0x1]
      Page length: 0  [0x79+0x1]
      Second SID address: 0x0  [0x7a+0x1]
      Third SID address: 0x0  [0x7b+0x1]
    C64 program  [0x7c+0x7]
